@@ -1,3 +1,12 @@
+2017-11-02  Simon Pfreundschuh <simon.pfreundschuh@chalmers.se>
+
+	* arts-2-3-855
+
+	* src/m_surface.cc: Added WSM to calculate surface emisison
+	and reflexivity using TESSEM.
+
+	* src/methods.cc: Added md_data entry for new WSM.
+
 2017-11-02  Richard Larsson  <ric.larsson@gmail.com>
 
 	* arts-2-3-854
